deploy/k8s-app/windows-containers/deploy-macos-vm.yaml
apiVersion: v1
kind: Pod
metadata:
  name: macos
  labels:
    name: macos
spec:
  terminationGracePeriodSeconds: 120 # the Kubernetes default is 30 seconds and it may be not enough
  containers:
    - name: macos
      image: dockurr/macos
      ports:
        - containerPort: 8006
          protocol: TCP
        - containerPort: 5900
          protocol: TCP
        - containerPort: 5900
          protocol: UDP
        - containerPort: 22
          protocol: TCP
      securityContext:
        privileged: true
      volumeMounts:
        - mountPath: /storage
          name: storage
        - mountPath: /dev/kvm
          name: dev-kvm
  volumes:
    - name: storage
      persistentVolumeClaim:
        claimName: macos-pvc
    - name: dev-kvm
      hostPath:
        path: /dev/kvm
---
apiVersion: v1
kind: Service
metadata:
  name: macos
spec:
  type: LoadBalancer
  selector:
    name: macos
  # loadBalancerSourceRanges:
  # - x.x.x.x/32
  ports:
    - name: tcp-no-vnc-8006
      protocol: TCP
      port: 8006
      targetPort: 8006
    - name: tcp-ssh-22
      protocol: TCP
      port: 22
      targetPort: 22
    - name: tcp-5900
      protocol: TCP
      port: 5900
      targetPort: 5900
    - name: udp-rdp-5900
      protocol: UDP
      port: 5900
      targetPort: 5900
